fix navbar colors/spacing

--- a/src/App.css
+++ b/src/App.css
@@ -29,14 +29,15 @@ body {
 }
 
 nav {
-  padding: 60px 30px 0px 30px;
+  padding: 60px 0px 0px 0px;
   flex: var(--sidebar-flex);
-  background: rgb(67, 34, 214);
-  background: linear-gradient(
+  background: rgb(87, 75, 255) 80%;
+  /* background: linear-gradient(
     180deg,
     rgb(67, 34, 214) 50%,
     rgba(132, 124, 252, 1) 80%
-  );
+  ); */
+  border-right: 1px solid black;
 }
 
 nav ul {
@@ -47,14 +48,14 @@ nav ul {
   color: white !important;
 }
 
-nav ul li {
+/* nav ul li {
   margin: 40px;
   font-size: var(--fontsize-nav);
   text-align: center;
   list-style-type: none;
   text-decoration: none !important;
   color: white !important;
-}
+} */
 
 .navitem:link {
   font-size: var(--fontsize-nav);
@@ -73,14 +74,22 @@ nav ul li {
 }
 
 .active {
-  font-weight: bolder;
+  background-color: rgb(128, 130, 255);
+  /* padding: 15px 0px; */
+  /* border-radius: 20%; */
+}
+
+.nav-bg {
+  height: 100%;
+  width: 100%;
+  margin: ;
 }
 
 .social {
   position: absolute;
   margin-top: 20px;
   display: flex;
-  bottom: 60px;
+  bottom: 150px;
 }
 
 .icon {
@@ -94,6 +103,13 @@ nav ul li {
   color: #000000;
 }
 
+.icon-navbar {
+  /* color: white !important; */
+  height: 140px;
+  width: 140px;
+  padding: 15px 0px;
+}
+
 .home {
   display: flex;
   justify-content: center;
@@ -101,7 +117,7 @@ nav ul li {
   align-items: center;
 }
 .profilepic {
-  border-radius: 50%;
+  border-radius: 20%;
   width: 200px;
   margin: 30px;
 }
@@ -124,7 +140,7 @@ a {
     flex-direction: column;
   }
 
-  .sidebar {
+  /* .sidebar {
     padding: 30px;
     background: rgb(67, 34, 214);
     background: linear-gradient(
@@ -132,16 +148,16 @@ a {
       rgb(67, 34, 214) 50%,
       rgba(132, 124, 252, 1) 80%
     );
-  }
+  } */
   .condiv {
     padding: 50px;
   }
   nav ul {
     display: flex;
   }
-  nav ul li {
+  /* nav ul li {
     margin: 10px;
-  }
+  } */
   .social {
     left: 0;
     width: 100vw;
